fixed an error in CSS which made multiline descriptions cut off with an ellipsis after one line. should break correctly now.

--- a/style_classic.css
+++ b/style_classic.css
@@ -123,14 +123,11 @@ a.button {
 }
 
 #entries dd .desc {
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
+	word-wrap: break-word;
 }
 
 #entries dd .url {
 	color: #4cd964;
-	/* word-wrap: break-word; */
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
